--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "~4.14.1",
     "npm-run-all": "~4.1.5",
+    "regenerator-runtime": "^0.13.7",
     "sass-loader": "^10.0.5",
     "vue-template-compiler": "~2.6.12"
   },
